系统设置的页面跳转

--- a/res/layout/set_about_us.xml
+++ b/res/layout/set_about_us.xml
@@ -3,107 +3,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-             <RelativeLayout 
+    <!-- 关于我们界面 -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rub_course_back_icon"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-      <TextView 
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:text="@string/about_us"
-          android:gravity="center"
-          android:textSize="15sp"/>
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rub_course_back_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/about_us"
+            android:textSize="15sp" />
     </RelativeLayout>
 
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="1dp"
-      android:background="@color/beizhu"/>
-<ImageView 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ic_launcher"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-<RelativeLayout 
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/score_to_me"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="1dp"
+        android:background="@color/beizhu" />
 
- </RelativeLayout> 
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-<RelativeLayout 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/ic_launcher" />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/function"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
 
- </RelativeLayout>  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-<RelativeLayout 
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/check_new_version"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="10dp"
+        android:background="@color/background" />
 
- </RelativeLayout>
-   <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/score_to_me" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/function" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/check_new_version" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
 </LinearLayout>
