--- a/res/layout/set_account_manager.xml
+++ b/res/layout/set_account_manager.xml
@@ -3,66 +3,77 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-       <RelativeLayout 
+    <!-- 帐号管理界面 -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rub_course_back_icon"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-      <TextView 
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:text="@string/account_manager"
-          android:gravity="center"
-          android:textSize="15sp"/>
-    </RelativeLayout>
-  <View 
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rub_course_back_icon" />
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/beizhu"/>
-<RelativeLayout 
-    android:layout_width="match_parent"
-    android:layout_height="50dp">
-    <ImageView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/icon"
-        android:layout_margin="10dp"/>
-    <TextView 
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/account_manager"
+            android:textSize="15sp" />
+    </RelativeLayout>
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="用户名"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-       />
-</RelativeLayout>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-<RelativeLayout 
-    android:layout_width="match_parent"
-    android:layout_height="30dp">
-    <ImageView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/add"
-        android:background="@color/beizhu"/>
-    <TextView 
+        android:layout_height="2dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/add_account"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-       />
-</RelativeLayout>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
+        android:layout_height="50dp" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:text="用户名" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@color/beizhu"
+            android:src="@drawable/add" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:text="@string/add_account" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
 </LinearLayout>
