--- a/res/layout/set_account_safety.xml
+++ b/res/layout/set_account_safety.xml
@@ -3,175 +3,186 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-       <RelativeLayout 
+    <!-- 帐号安全界面 -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rub_course_back_icon"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-      <TextView 
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:text="@string/account_safety"
-          android:gravity="center"
-          android:textSize="15sp"/>
-    </RelativeLayout>
-    <View 
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rub_course_back_icon" />
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/beizhu"/>
-       <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/login_name"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-     <TextView 
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="300M"
-      android:gravity="center_vertical"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="30dp"
-      />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/account_safety"
+            android:textSize="15sp" />
     </RelativeLayout>
-  
-   
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  
-   <RelativeLayout 
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/email_addr"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-     <TextView 
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="@string/unbind"
-      android:gravity="center_vertical"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="30dp"
-      />
-     <ImageView 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/rub_course_go_to_next_right"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="20dp"/>
-    </RelativeLayout>
-  
-   
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-           <RelativeLayout 
+        android:layout_height="2dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/tel"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-     <TextView 
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="10086"
-      android:gravity="center_vertical"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="30dp"
-      />
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/login_name" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:gravity="center_vertical"
+            android:text="300M" />
     </RelativeLayout>
-  
-   
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-           <RelativeLayout 
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/change_pw"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-    
-    </RelativeLayout>
-  
-   
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-            <RelativeLayout 
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/safety_center"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-    
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/email_addr" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:gravity="center_vertical"
+            android:text="@string/unbind" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rub_course_go_to_next_right" />
     </RelativeLayout>
-  
-   
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/tel" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:gravity="center_vertical"
+            android:text="10086" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/change_pw" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/safety_center" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
 </LinearLayout>
