--- a/res/layout/set_private_set.xml
+++ b/res/layout/set_private_set.xml
@@ -3,149 +3,170 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-         <RelativeLayout 
+    <!-- 隐私设置界面 -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rub_course_back_icon"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-      <TextView 
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:text="@string/account_manager"
-          android:gravity="center"
-          android:textSize="15sp"/>
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rub_course_back_icon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="隐私设置"
+            android:textSize="15sp" />
     </RelativeLayout>
 
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="1dp"
-      android:background="@color/beizhu"/>
- 
-    
-<RelativeLayout 
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/add_need"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="1dp"
+        android:background="@color/beizhu" />
 
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/><RelativeLayout 
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/qq_friend"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="30dp" >
 
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-     <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/search_by_tel"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/add_need" />
+    </RelativeLayout>
 
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/><RelativeLayout 
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/blacklist"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-  <ImageView 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/rub_course_go_to_next_right"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="20dp"/>
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/><RelativeLayout 
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/do_let_them_see"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-  <ImageView 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/rub_course_go_to_next_right"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="20dp"/>
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
- 
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/qq_friend" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/search_by_tel" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/blacklist" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rub_course_go_to_next_right" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/do_let_them_see" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rub_course_go_to_next_right" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
 </LinearLayout>
