--- a/res/layout/set_usual_set.xml
+++ b/res/layout/set_usual_set.xml
@@ -3,158 +3,180 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-           <RelativeLayout 
+
+    <!-- 通用设置界面 -->
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp" >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rub_course_back_icon"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-      <TextView 
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:text="@string/usual_set"
-          android:gravity="center"
-          android:textSize="15sp"/>
-    </RelativeLayout>
-  <View 
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rub_course_back_icon" />
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/beizhu"/>
-     <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/textsize_set"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-     <TextView 
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:text="@string/small"
-      android:gravity="center_vertical"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="30dp"
-      />
-     <ImageView 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/rub_course_go_to_next_right"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="20dp"/>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/usual_set"
+            android:textSize="15sp" />
     </RelativeLayout>
-       
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-<RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/display_beizhu"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
 
- </RelativeLayout>
-      <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-       <RelativeLayout 
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/start_fast_move"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="2dp"
+        android:background="@color/beizhu" />
 
- </RelativeLayout>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-            <RelativeLayout 
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/portrait_landscape"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
+        android:layout_height="30dp" >
 
- </RelativeLayout>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-  <View 
-      android:layout_width="match_parent"
-      android:layout_height="10dp"
-      android:background="@color/background"/>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
-         <RelativeLayout 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/textsize_set" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:gravity="center_vertical"
+            android:text="@string/small" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rub_course_go_to_next_right" />
+    </RelativeLayout>
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="30dp">
-            <TextView 
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="@string/sound_vibrate"
-      android:gravity="center_vertical"
-     android:layout_marginLeft="20dp"
-      />
-<ImageView 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/rub_course_go_to_next_right"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:layout_marginRight="20dp"/>
- </RelativeLayout>
-    <View 
-      android:layout_width="match_parent"
-      android:layout_height="0.5dp"
-      android:background="@color/beizhu"/>
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/display_beizhu" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/start_fast_move" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/portrait_landscape" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/sound_vibrate" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rub_course_go_to_next_right" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/beizhu" />
 
 </LinearLayout>
