--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -18,7 +18,16 @@
         android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
         android:src="@drawable/rub_course_back_icon"
         android:visibility="gone" />
-
+    <TextView 
+        android:id="@+id/title_navigation_back_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
+        android:visibility="gone"
+        android:text="取消"/>
     <LinearLayout
         android:id="@+id/title_navigation_view"
         android:layout_width="wrap_content"
