--- a/res/layout/activity_yue_lu_safety_verification.xml
+++ b/res/layout/activity_yue_lu_safety_verification.xml
@@ -2,57 +2,74 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="#f2f4f5"
     android:orientation="vertical" >
+
     <!-- 输入验证码的界面 -->
+
     <include
         android:id="@+id/sasafety_verification_title_bar"
         layout="@layout/title_navigation_bar" />
-
+    <TextView 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:text="请先输入验证码在继续操作"
+        android:textSize="12sp"
+        android:textColor="#888888"/>
+   
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
         android:orientation="horizontal" >
 
         <ImageView
-             android:id="@+id/safety_verification_image_another_one"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
-            android:background="@color/gray"
-            android:contentDescription="@drawable/ic_launcher" />
-
-        <TextView
-             android:id="@+id/safety_verificatio_text_another_one"
+            android:id="@+id/safety_verification_image_another_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="7dp"
+            android:src="@drawable/yo_hey_verification_code"
+            android:contentDescription="@drawable/yo_hey_verification_code" />
+
+        <TextView
+            android:id="@+id/safety_verificatio_text_another_one"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/another_one" />
+            android:layout_marginLeft="7dp"
+            android:layout_marginStart="7dp"
+            android:text="@string/another_one"
+            android:textColor="#888888"
+            android:textSize="15sp"/>
     </LinearLayout>
 
     <EditText
-         android:id="@+id/safety_verification_edit_cofirmation_code"
+        android:id="@+id/safety_verification_edit_cofirmation_code"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="19dp"
         android:background="@drawable/text_stroke"
         android:hint="@string/enter_confirmation_code"
         android:padding="3dp"
-        android:paddingLeft="10dp"
-        android:paddingStart="10dp"
-        android:paddingRight="10dp"
-        android:textSize="14sp" />
+        android:paddingLeft="11dp"
+        android:paddingStart="11dp"
+        android:textSize="15sp"
+        android:textColor="#888888"/>
 
     <Button
         android:id="@+id/safety_verification_button_submit"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginRight="11dp"
         android:background="@drawable/button_rounded_corners_and_solid"
-        android:padding="5dp"
-        android:text="@string/submit" />
+        android:text="@string/submit"
+        android:textColor="#ffffff"
+        android:textSize="15sp"/>
 
 </LinearLayout>
