--- a/res/layout/fragment_text.xml
+++ b/res/layout/fragment_text.xml
@@ -15,8 +15,8 @@
     <RelativeLayout
         android:id="@+id/fragment_text_post_share"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:visibility="gone">
+        android:layout_height="wrap_content"
+        android:visibility="gone" >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -28,6 +28,7 @@
                 android:id="@+id/fragment_text_post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@drawable/ic_launcher"
                 android:src="@drawable/ic_launcher" />
 
             <ImageView
@@ -35,6 +36,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:contentDescription="@drawable/ic_launcher"
                 android:src="@drawable/ic_launcher" />
         </LinearLayout>
     </RelativeLayout>
