--- a/res/layout/bottom_of_the_selection_bar.xml
+++ b/res/layout/bottom_of_the_selection_bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:layout_gravity="center"
     android:background="@color/write" >
 
@@ -9,72 +9,69 @@
         android:id="@+id/selection_bar_radio_group"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="#343434"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" >
 
         <RadioButton
             android:id="@+id/selection_bar_main"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_weight="1"
             android:button="@null"
             android:checked="true"
-            android:drawableTop="@drawable/iconfont_623"
-            android:gravity="center_horizontal"
-            android:text="@string/homepage"
-            android:textSize="13sp" />
+            android:drawablePadding="-20dp"
+            android:drawableTop="@drawable/main_shou_ye_zhi_ye"
+            android:gravity="center_horizontal" />
 
         <RadioButton
             android:id="@+id/selection_bar_friends"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/iconfont_621"
-            android:gravity="center_horizontal"
-            android:text="@string/friends"
-            android:textSize="13sp" />
+            android:drawablePadding="-20dp"
+            android:drawableTop="@drawable/main_shou_ye_xiao_xi"
+            android:gravity="center_horizontal" />
 
         <ImageView
-            android:id="@+id/selection_bar_post_share"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_launcher"
-            android:contentDescription="@drawable/ic_launcher" />
+            android:contentDescription="@drawable/ic_launcher"
+            android:gravity="center_horizontal" />
 
         <RadioButton
             android:id="@+id/selection_bar_circle_of_friends"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/iconfont_622"
-            android:gravity="center_horizontal"
-            android:text="@string/lufriends"
-            android:textSize="13sp" />
+            android:drawablePadding="-20dp"
+            android:drawableTop="@drawable/main_shou_ye_lu_you_quan"
+            android:gravity="center_horizontal" />
 
         <RadioButton
             android:id="@+id/selection_bar_personal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/iconfont_geren11"
-            android:gravity="center_horizontal"
-            android:text="@string/me"
-            android:textSize="13sp" />
+            android:drawablePadding="-20dp"
+            android:drawableTop="@drawable/main_shou_ye_wo"
+            android:gravity="center_horizontal" />
     </RadioGroup>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/gray" />
+    <ImageView
+        android:id="@+id/selection_bar_post_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@drawable/login_select_bar_mian"
+        android:src="@drawable/login_select_bar_mian" />
 
 </RelativeLayout>
