--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -13,5 +13,10 @@
     <color name="white">#ffffff</color>
     <color name="assist">#ff8417</color>
     <color name="red">#dd0000</color>
-
+	<color name="main_gray">#f5f5f5</color>
+	<color name="thread_gray">#F0F0F0</color>
+	<color name="line">#d9dbdc</color>
+    <color name="main_title_text">#2B2B2B</color>
+    <color name="main_text">#888888</color>
+    <color name="title_text">#333333</color>
 </resources>
